# SubmarinePython

./: README.md  pyproject.toml
.github/workflows/: python-app.yml
subpy/: __init__.py  core.py
