[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "subpy"
version = "0.1.0"
description = "SubPy - Submarine Data Analysis Toolkit"
authors = [{ name = "Ishaan D" }]
readme = "README.md"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["."]
